--- a/src/notebase/HomePageFXML.fxml
+++ b/src/notebase/HomePageFXML.fxml
@@ -10,32 +10,9 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #FDC400;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="notebase.HomeScreenFXMLController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="584.0" style="-fx-background-color: #FDC400;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="notebase.HomeScreenFXMLController">
    <children>
-      <HBox prefHeight="58.0" prefWidth="600.0" style="-fx-background-color: #515751;">
-         <children>
-            <Button mnemonicParsing="false" prefHeight="53.0" prefWidth="177.0" style="-fx-background-color: #515751;" text="NoteBase" textFill="WHITE">
-               <font>
-                  <Font name="Eras Medium ITC" size="24.0" />
-               </font>
-            </Button>
-            <HBox nodeOrientation="RIGHT_TO_LEFT" prefHeight="58.0" prefWidth="426.0">
-               <children>
-                  <Button mnemonicParsing="false" opacity="0.8" prefHeight="53.0" prefWidth="74.0" style="-fx-background-color: #515751;" text="account" textFill="WHITE">
-                     <font>
-                        <Font name="Eras Medium ITC" size="14.0" />
-                     </font>
-                  </Button>
-                  <Button mnemonicParsing="false" opacity="0.8" prefHeight="53.0" prefWidth="74.0" style="-fx-background-color: #515751;" text="home" textFill="WHITE">
-                     <font>
-                        <Font name="Eras Medium ITC" size="14.0" />
-                     </font>
-                  </Button>
-               </children>
-            </HBox>
-         </children>
-      </HBox>
-      <Pane layoutY="58.0" prefHeight="342.0" prefWidth="600.0">
+      <Pane layoutY="58.0" prefHeight="328.0" prefWidth="600.0">
          <children>
             <StackPane layoutX="30.0" layoutY="9.0" prefHeight="53.0" prefWidth="20.0">
                <children>
@@ -74,5 +51,28 @@
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="17.0" layoutX="4.0" layoutY="45.0" stroke="BLACK" strokeType="INSIDE" width="27.0" />
          </children>
       </Pane>
+      <HBox prefHeight="53.0" prefWidth="600.0" style="-fx-background-color: #515751;">
+         <children>
+            <Button mnemonicParsing="false" prefHeight="52.0" prefWidth="147.0" style="-fx-background-color: #515751;" text="NoteBase" textFill="WHITE">
+               <font>
+                  <Font name="Eras Medium ITC" size="24.0" />
+               </font>
+            </Button>
+            <HBox nodeOrientation="RIGHT_TO_LEFT" prefHeight="47.0" prefWidth="467.0">
+               <children>
+                  <Button mnemonicParsing="false" opacity="0.8" prefHeight="52.0" prefWidth="93.0" style="-fx-background-color: #515751;" text="signup" textFill="WHITE">
+                     <font>
+                        <Font name="Eras Medium ITC" size="17.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" opacity="0.8" prefHeight="52.0" prefWidth="74.0" style="-fx-background-color: #515751;" text="login" textFill="WHITE">
+                     <font>
+                        <Font name="Eras Medium ITC" size="17.0" />
+                     </font>
+                  </Button>
+               </children>
+            </HBox>
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
