--- a/src/notebase/HomePageFXML.fxml
+++ b/src/notebase/HomePageFXML.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="584.0" style="-fx-background-color: #FDC400;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="notebase.HomeScreenFXMLController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="584.0" style="-fx-background-color: #FDC400;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="notebase.AboutUsController">
    <children>
       <Pane layoutY="58.0" prefHeight="328.0" prefWidth="600.0">
          <children>
